<?xml version="1.0"?>
<package format="3">
    <name>py_pub_sub_pkg</name>
    <version>0.0.1</version>
    <description>Python publisher and subscriber package</description>

    <maintainer email="shashank3199@gmail.com">Shashank Goyal</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>rclpy</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_python</build_type>
    </export>

</package>